Adjusts the way @user is passed into new user page to satisfy Heroku. Adds CSS-friendly classes to more forms

--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -192,7 +192,7 @@ header nav li {
   border-color: #0b0;
 }
 
-input.submit {
+input.submit, button.submit {
   background: #a7ba5c;
   color:black;
 }
