--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
 
   <section class="middle-column">
     <section class="new-user-form">
-      <%= render 'details', mode: :new %>
+      <%= render 'details', mode: :new, user: @user %>
     </section>
   </section>
 </div>
