--- a/app/views/layouts/_navigation_bar_signed_in.html.erb
+++ b/app/views/layouts/_navigation_bar_signed_in.html.erb
@@ -4,5 +4,5 @@
   <li><%= link_to "Dashboard", root_url %></li>
   <li><%= link_to "My profile", user_gallery_url(current_user) %></li>
   <li><%= link_to "Settings", edit_user_url(current_user) %></li>
-  <li><%= button_to "Sign Out", session_url, method: :delete %></li>
+  <li><%= button_to "Sign Out", session_url, method: :delete, class: "submit" %></li>
 </ul>
