Implements Twitter sign-in. Makes email & home city non-compulsory. Updates dashboard and profile views to accommodate.

--- a/app/views/galleries/_user_details.html.erb
+++ b/app/views/galleries/_user_details.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  <%= link_to user.home_city.name, city_url(user.home_city_id) %>
+  <%= link_to user.home_city.name, city_url(user.home_city_id) if !!user.home_city_id %>
 </p>
 
 <p>
