Implements celsius feature. Adds helper methods for converting temperatures.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,9 +42,12 @@ display: block;
 }
 
 input[type="text"],
+input[type="number"],
+//input[type="radio"],
 input[type="email"],
 input[type="password"],
-input[type="submit"] {
+input[type="submit"],
+textarea {
   -webkit-appearance: none;
   display: inline-block;
   margin: 0;
