--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -180,7 +180,7 @@ header nav li {
   padding: 0 0 5px 0;
 }
 
-.input > input {
+.input > input, textarea {
   border: 2px solid #000;
   padding: 5px 10px;
 /*  width: 250px;*/
