Replaces some textbox labels with placeholders.

--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -188,6 +188,10 @@ header nav li {
   background:#ffffff;
 }
 
+.input > input[type="radio"] {
+  display:block;
+}
+
 .input > input:focus {
   border-color: #0b0;
 }
