--- a/app/views/cities/_city_picker.html.erb
+++ b/app/views/cities/_city_picker.html.erb
@@ -11,8 +11,7 @@
 
   <%= insert_form_authenticity_token %>
 
-  <label for="search_query">Search by City</label>
-  <input type="text" name="search_query" value="" id="search_query">
+  <input type="text" name="search_query" value="" id="search_query" placeholder="Search by City">
 
   <input class="submit" type="submit" value="Search">
 </form>
