--- a/app/views/photos/_full_feed.html.erb
+++ b/app/views/photos/_full_feed.html.erb
@@ -52,8 +52,7 @@
             method="post">
             <%= insert_form_authenticity_token %>
 
-              <label for="comment">Add a Comment:</label>
-              <textarea name="comment[body]" id="comment"></textarea>
+              <textarea name="comment[body]" id="comment" placeholder="Add a Comment:"></textarea>
 
 
             <input type="submit" value="Post">
