--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,61 +1,40 @@
 <!-- /app/views/users/dashboard.html.erb -->
 
-<div class="content dashboard">
+<section class="left-column">
 
-<header>
-  <a href="<%= root_url %>">
-    <%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %>
-  </a>
-  <h1 class="page-title">Welcome, <%= link_to current_user.user_name,
-    user_gallery_url(current_user) %>!</h2>
-  <nav>
-    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
-    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
-  </nav>
-</header>
-
-<section class="main-columns">
-  <section class="city-picker">
-    <%= render "cities/city_picker", cities: @cities %>
+  <section class="home-city-weather">
+    <h3 class="section-title">My Weather</h3>
+      <% if !!current_user.home_city_id %>
+        <%= render "cities/current_weather_summary", city: current_user.home_city %>
+      <% else %>
+        <%= link_to "See your local weather here: add your home city.", edit_user_url(current_user) %>
+      <% end %>
   </section>
 
-  <section class="middle-column">
-    <section class="home-city-weather">
-      <h2 class="section-title">My Weather</h3>
-        <% if !!current_user.home_city_id %>
-          <%= render "cities/current_weather_summary", city: current_user.home_city %>
-        <% else %>
-          <%= link_to "See your local weather here: add your home city.", edit_user_url(current_user) %>
+  <section class="favorite-cities-weather">
+    <h3 class="section-title">Favorite Cities</h3>
+      <ul>
+        <% @favorite_cities_without_home.each do |city| %>
+          <li>
+            <%= render "cities/current_weather_summary", city: city %>
+          </li>
         <% end %>
-    </section>
-
-    <section class="photo-feed">
-      <h2 class="section-title">Weather Photos</h3>
-        <%= render "photos/full_feed", photos: @photos %>
-
-        <%= paginate @photos %>
-    </section>
+      </ul>
   </section>
 
-  <section class="right-column">
-    <section>
-      <h2 class="section-title">Favorite Places</h3>
-        <ul>
-          <% @favorite_cities_without_home.each do |city| %>
-            <li>
-              <%= render "cities/current_weather_summary", city: city %>
-            </li>
-          <% end %>
-        </ul>
-    </section>
+  <!-- <section>
+    <%#= render "weather_reports/new",
+      weather_conditions: @weather_conditions,
+      cities: @cities %>
+  </section> -->
 
-    <section>
-      <%= render "weather_reports/new",
-        weather_conditions: @weather_conditions,
-        cities: @cities %>
-    </section>
-
-  </section>
 </section>
 
-</div>
+<section class="main-column">
+  <section class="photo-feed">
+    <h3 class="section-title">Weather Photos</h3>
+      <%= render "photos/full_feed", photos: @photos %>
+
+      <%= paginate @photos %>
+  </section>
+</section>
