--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,26 +1,11 @@
 <!-- app/views/cities/show.html.erb -->
 
-<div class="content city-weather">
+<h2 class="page-title">Current Weather in <%= @city.name %></h1>
+  <%= insert_approriate_favorite_city_button(@city.id) if signed_in? %>
 
-<header>
-  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
-  <h1 class="page-title">Current Weather in <%= @city.name %></h1>
-  <nav>
-    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
-    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
-  </nav>
-</header>
-
-
-<section class="main-columns">
-  <section class="city-picker">
-    <%= render "cities/city_picker", cities: @cities %>
-  </section>
-
-  <section class="middle-column">
-    <section class="current-conditions">
-      <h2 class="section-title">Current Conditions</h2>
-
+<section class="city-weather-left-column">
+  <section class="current-conditions">
+      <h3 class="section-title">Current Conditions</h2>
 
       <%= image_tag top_weather_condition_icon(@city).url(:thumbnail), class: "current-weather-icon" %>
       <em><%= @current_temperature %>&deg; <%= current_user.try(:celsius) ? "C" : "F" %></em>
@@ -34,43 +19,43 @@
         <% end %>
 
       </table>
-    </section>
-
-    <section class="recent-reports">
-      <h2 class="section-title">Latest Reports</h2>
-      <table>
-        <tr>
-          <th>Temperature</th>
-          <th>Condition</th>
-          <th>Submission Time</th>
-        </tr>
-
-        <% @recent_reports.take(10).each do |report| %>
-        <tr>
-          <td>
-            <%= report.temperature %> &deg; <%= current_user.try(:celsius) ? "C" : "F" %>
-          </td>
-          <td><%= report.weather_condition.description %></td>
-          <td><%= friendly_time_format(report.created_at) %></td>
-        </tr>
-        <% end %>
-
-      </table>
-    </section>
   </section>
 
-  <section class="right-column">
-    <p>
-      <%= link_to "New Report for #{@city.name}", new_weather_report_url(city_id: @city.id) %>
-    </p>
+  <section class="recent-reports">
+    <h2 class="section-title">Latest Reports</h2>
+     <table>
+      <tr>
+        <th>Temperature</th>
+        <th>Condition</th>
+        <th>Submission Time</th>
+      </tr>
 
-      <%= insert_approriate_favorite_city_button(@city.id) if signed_in? %>
+      <% @recent_reports.take(10).each do |report| %>
+      <tr>
+        <td>
+          <%= report.temperature %> &deg; <%= current_user.try(:celsius) ? "C" : "F" %>
+        </td>
+        <td><%= report.weather_condition.description %></td>
+        <td><%= friendly_time_format(report.created_at) %></td>
+      </tr>
+      <% end %>
 
-    <section class="recent-photos">
-      <h2 class="section-title"><%= link_to "Latest Photos", city_gallery_url(@city) %></h2>
-      <%= render "photos/photo_list_minimal_caption", photos: @photos %>
-    </section>
+    </table>
   </section>
 </section>
 
-</div>
+<section class="city-weather-right-column">
+
+  <p>
+    <%= link_to "New Report for #{@city.name}", new_weather_report_url(city_id: @city.id) %>
+  </p>
+
+  <section class="recent-photos">
+    <h2 class="section-title"><%= link_to "Latest Photos", city_gallery_url(@city) %></h2>
+    <%= render "photos/photo_list_minimal_caption", photos: @photos %>
+  </section>
+
+
+
+</section>
+
