--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,26 +1,13 @@
 <!-- /app/views/photos/new.html.erb -->
 
+<h2 class="page-title">Add A Photo</h2>
 
-<div class="content new-session">
+<section class="left-column">
 
-<header>
-  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
-  <h1 class="page-title">Add A Photo</h1>
-  <nav>
-    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
-    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
-  </nav>
-</header>
+</section>
 
-
-<section class="main-columns">
-  <section class="city-picker">
-    <%= render "cities/city_picker", cities: @cities %>
+<section class="main-column">
+  <section class="new-photo-form">
+    <%= render "details", mode: :new, cities: @cities, photo: @photo %>
   </section>
-
-  <section class="middle-column">
-    <section class="new-photo-form">
-      <%= render "details", mode: :new, cities: @cities, photo: @photo %>
-    </section>
-  </section>
-</div>
+</section>
