--- a/app/views/weather_reports/new.html.erb
+++ b/app/views/weather_reports/new.html.erb
@@ -1,25 +1,9 @@
 <!-- /app/views/photos/new.html.erb -->
 
-<div class="content new-weather-report">
+<h2 class="page-title">New Weather Report</h2>
 
-<header>
-  <a href="<%= root_url %>"><%= image_tag "http://placehold.it/350x150&text=Logo", class: "logo" %></a>
-  <h1 class="page-title">New Weather Report</h1>
-  <nav>
-    <%= render "layouts/navigation_bar_signed_in" if signed_in? %>
-    <%= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
-  </nav>
-</header>
-
-
-<section class="main-columns">
-  <section class="city-picker">
-    <%= render "cities/city_picker", cities: @cities %>
+<section class="main-column">
+  <section class="new-weather-report-form">
+    <%= render "new", cities: @cities, weather_conditions: @weather_conditions %>
   </section>
-
-  <section class="middle-column">
-    <section class="new-weather-report-form">
-      <%= render "new", cities: @cities, weather_conditions: @weather_conditions %>
-    </section>
-  </section>
-</div>
+</section>
