--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -2,7 +2,7 @@
 
 /*--------- TOP-MOST CONTAINERS ---------*/
 body {
-  font-family:Helvetica, sans-serif;
+  font-family:'Fira Sans', Helvetica, sans-serif;
   padding-top:1px;
   background:linen;
 }
@@ -22,6 +22,12 @@ img.content-photo {
 
 }
 
+.degree-units {
+  display:inline-block;
+  font-size:50%;
+  vertical-align:middle;
+}
+
 /*--------- CLEARFIX ---------*/
 .group:after {
   clear:both;
@@ -39,6 +45,8 @@ header {
 }
 
 .header-content {
+  display:block;
+  position:relative;
   width:950px;
   margin-left:auto;
   margin-right:auto;
@@ -65,7 +73,7 @@ header h1.site-logo {
 header nav {
   display:block;
   float:right;
-  height: 70px;
+  height: auto;
 }
 
 
@@ -86,43 +94,113 @@ header nav ul {
   display:block;
   float:left;
   padding-right:10px;
+  padding-bottom:10px;
 }
 
 header nav li.icon {
   display:block;
   float:left;
   margin:10px;
+  margin-bottom:0px;
   width:25px;
   height:0px;
   padding-top:25px;
+/*  padding-bottom:30px;*/
   overflow:hidden;
 }
 
-header nav li.new-post {
+.relative-dummy-element{
+
+}
+
+header nav li#new-post {
   background: url("https://s3.amazonaws.com/weather-app-production/icons/new-post.png") no-repeat 0 0;
   background-size:contain;
 }
 
-header nav li.notifications {
+header nav li#notifications {
   background: url("https://s3.amazonaws.com/weather-app-production/icons/notifications.png") no-repeat 0 0;
   background-size:contain;
 }
 
-header nav li.user-menu {
+header nav li#user-menu {
   background: url("https://s3.amazonaws.com/weather-app-production/icons/user-menu.png") no-repeat 0 0;
   background-size:contain;
 }
 
-header nav li.settings-menu {
+header nav li#settings-menu {
   background: url("https://s3.amazonaws.com/weather-app-production/icons/settings.png") no-repeat 0 0;
   background-size:contain;
 }
 
 header nav li.icon:hover {
   cursor:pointer;
-  border-bottom:1px solid ghostwhite;
+/*  border-bottom:1px solid red;*/
 /*  background:blue;*/
 }
+
+header .nav-bar-dropdown {
+  display:block;
+  position:absolute;
+  z-index:3;
+  width:180px;
+  padding:9px;
+  background:#ffffff;
+  color:#333;
+  border: 1px solid #ccc;
+  border-radius:5px;
+/*  top:59px;*/
+  top:75px;
+  right:0px;
+}
+
+header .nav-bar-dropdown.hidden {
+  display:none;
+}
+
+
+nav .icon:hover .nav-bar-dropdown {
+  display:block;
+}
+
+header .nav-bar-dropdown h3 {
+  font-size:14pt;
+}
+
+header .nav-bar-dropdown input[type="text"] {
+  width:150px;
+}
+
+.nav-bar-dropdown .triangle-up {
+  display:block;
+  position:absolute;
+  height:0px;
+  width:0px;
+  border-top:18px solid transparent;
+  border-left:18px solid transparent;
+  border-right:18px solid transparent;
+  border-bottom: 18px solid #ffffff;
+  z-index:2;
+  top:-28px;
+  right:00px;
+}
+
+#new-post .triangle-up {
+  right:150px;
+}
+
+#notifications .triangle-up {
+  right:105px;
+}
+
+#user-menu .triangle-up {
+  right:60px;
+}
+
+#settings-menu .triangle-up {
+  right:15px;
+}
+
 /*--------- CONTENT ---------*/
 .content {
   display:block;
@@ -169,6 +247,7 @@ header nav li.icon:hover {
 h2.page-title{
   font-size:24pt;
   font-weight:bold;
+  margin-bottom:20px;
 }
 
 h3.section-title {
@@ -176,56 +255,6 @@ h3.section-title {
   font-weight:bold;
 }
 
-/*------------------------------------*/
-
-.photo-feed
-  li {
-    display:block;
-    width:350px;
-    margin-left:auto;
-    margin-right:auto;
-    padding-bottom:10px;
-    margin-bottom:10px;
-  }
-
-  img.content-photo {
-    width:350px;
-    margin-bottom:25px;
-  }
-
-  figcaption {
-    font-size:10pt;
-  }
-
-  img.avatar {
-    width:25px;
-    height:25px;
-  }
-
-  ul.tag-list {
-    display:block;
-    position:relative;
-    height:40px;
-  }
-
-  ul.tag-list  li {
-      display:inline-block;
-      float:left;
-      padding:2px;
-      margin-left:2px;
-      margin-bottom:10px;
-      border: 1px solid #999;
-      width:50px;
-    }
-
-
-/*--------- RIGHT COLUMN ---------*/
-
-.right-column {
-  display:block;
-  float:left;
-  width:200px;
-}
 
 
 /*------------- JONATHAN'S FORM STYLES --------------*/
@@ -235,12 +264,13 @@ h3.section-title {
 }
 
 .input > label {
-  display: block;
+  display: inline-block;
   font-weight: bold;
-  padding: 0 0 5px 0;
+  padding: 20px 0 5px 0;
 }
 
-.input > input, textarea {
+.input > input, textarea, select {
+  display:block;
   border: 2px solid #000;
   padding: 5px 10px;
 /*  width: 250px;*/
@@ -249,7 +279,7 @@ h3.section-title {
 }
 
 .input > input[type="radio"] {
-  display:block;
+  display:inline-block;
 }
 
 .input > input:focus {
